# templates_for_program

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  POETRY.md  README.md  docker-compose.yml  pyproject.toml
app/: main.py  settings.py
app/core/: log.py
app/core/schemas/: __init__.py  base.py  webhook.py
app/log/: __init__.py  rotator.py  web.json
app/service/: simple.py
app/settings/: __init__.py  web.json
src/: main.py
